# avdl

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  ast_node.c  ast_node.h  avdl.spec  configure  dd_dynamic_array.c  dd_dynamic_array.h  documentation  example.dd  file_op.c  file_op.h  lex.l  makefile  makefile.in  parser.c  parser.h  snapcraft.yaml  symtable.c  yacc.y
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: .auto-merge-stable.yml  .auto-merge.yml  .build.yml  .build.yml.swp  .c-package.yml  .codeql.yml  .compile_avdl_project.yml  .dependencies.yml  .unit-tests.yml
debian/: changelog  control  copyright  rules
doc/: avdl.texi  ddlang.texi
engines/android/: .gitignore  build.gradle
engines/android/app/: build.gradle  build.gradle.in  build.gradle.in.googleplay  proguard-rules.pro
engines/android/app/src/main/: AndroidManifest.xml  AndroidManifest.xml.in  AndroidManifest.xml.in.googleplay
engines/android/app/src/main/cpp/: CMakeLists.txt  CMakeLists.txt.in
engines/android/app/src/main/java/dev/afloof/avdl/: AvdlActivity.java.in  AvdlActivity.java.in.googleplay
engines/android/app/src/main/java/org/darkdimension/avdl/: AvdlActivity.java  AvdlActivity.java.in  AvdlActivity.java.in.googleplay
engines/android/app/src/main/res/mipmap-anydpi/: ic_launcher.xml
engines/android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
engines/android/app/src/main/res/values/: strings.xml  strings.xml.in
engines/cengine/: .gitignore  cengine.cmake  makefile
engines/cengine/include/: avdl_achievements.h  avdl_ads.h  avdl_assetManager.h  avdl_cengine.h  avdl_collider.h  avdl_collider_aabb.h  avdl_collider_sphere.h  avdl_component.h  avdl_component_custom.h  avdl_component_mesh.h  avdl_component_terrain.h  avdl_data.h  avdl_engine.h  avdl_font.h  avdl_graphics.h  avdl_input.h  avdl_json.h  avdl_localisation.h  avdl_log.h  avdl_mesh.h  avdl_multiplayer.h  avdl_node.h  avdl_particle_system.h  avdl_physics.h  avdl_rigidbody.h  avdl_shaders.h  avdl_skeleton.h  avdl_skinned_mesh.h  avdl_skybox.h  avdl_steam.h  avdl_string.h  avdl_terrain.h  avdl_time.h  avdl_transform.h  avdl_ui_element.h  avdl_webapi.h  dd_async_call.h  dd_dynamic_array.h  dd_filetomesh.h  dd_fov.h  (+22 more)
engines/cengine/src/: avdl_achievements.c  avdl_achievements_steam.cpp  avdl_ads.c  avdl_assetManager.c  avdl_collider.c  avdl_collider_aabb.c  avdl_collider_sphere.c  avdl_component.c  avdl_component_custom.c  avdl_component_mesh.c  avdl_component_terrain.c  avdl_data.c  avdl_engine.c  avdl_engine_cpp.cpp  avdl_font.c  avdl_graphics_direct3d11.cpp  avdl_graphics_opengl.c  avdl_input.c  avdl_json.c  avdl_localisation.c  avdl_localisation_cpp.cpp  avdl_mesh.c  avdl_multiplayer.c  avdl_multiplayer_steam.cpp  avdl_node.c  avdl_particle_system.c  avdl_physics.c  avdl_rigidbody.c  avdl_shaders.c  avdl_skeleton.c  avdl_skinned_mesh.c  avdl_skybox.c  avdl_steam.c  avdl_steam_cpp.cpp  avdl_string.c  avdl_terrain.c  avdl_time.c  avdl_transform.c  avdl_ui_element.c  avdl_webapi.c  (+29 more)
engines/cengine/src/avdl_graphics/: avdl_graphics_direct3d11.cpp  avdl_graphics_opengl.c
engines/cengine/tests/: avdl_font.test.c  dd_sound.test.c
engines/d3d11/: DDSTextureLoader.cpp  DDSTextureLoader.h  Package.appxmanifest  Package.appxmanifest.in  SamplePixelShader.hlsl  SamplePixelShader2.hlsl  SampleVertexShader.hlsl  avdl_project.vcxproj  avdl_project.vcxproj.in
engines/quest2/Projects/Android/: .gitignore  AndroidManifest.xml  build.gradle.in  run_app.sh  settings.gradle
engines/quest2/Projects/Android/jni/: Android.mk.in  Application.mk
engines/quest2/gradle_mod/: build.gradle
engines/quest2/java/dev/afloof/avdl/: AvdlActivity.java
engines/quest2/res/values/: strings.xml.in
include/: agc_commands.h  ast_node.h  avdl_arguments.h  avdl_ast_node.h  avdl_commands.h  avdl_dynamic_array.h  avdl_editor.h  avdl_file_op.h  avdl_json.h  avdl_lexer.h  avdl_log.h  avdl_parser.h  avdl_pkg.h  avdl_platform.h  avdl_semantic_analyser.h  avdl_settings.h  avdl_std.h  avdl_string.h  avdl_struct_table.h  avdl_symtable.h  avdl_time.h  avdl_time2.h  dd_commands.h  dd_variable_type.h  lexer.h  parser.h  semantic_analyser.h  struct_table.h  symtable.h  whereami.h
manual/: avdl.1  ddlang.1
metadata/: changelog.md
metadata/docker/: avdl_project_android.Dockerfile  avdl_project_linux.Dockerfile  avdl_project_quest2.Dockerfile  avdl_ubuntu.Dockerfile  avdl_ubuntu_dependencies.Dockerfile
metadata/docker_project_android/: Dockerfile
samples/: app.avdl
samples-old/saveload/: saveload.dd
samples/fade/: fade.dd
samples/hello-world/: hello-world.dd
samples/saveload/: saveload.ags
scripts/: README.md  avdl_project_windows.bat  dependencies_android.sh  dependencies_linux.sh  dependencies_windows.bat  install_dependencies_ubuntu.sh
src/: agc_commands.c  ast_node.c  avdl_arguments.c  avdl_ast_node.c  avdl_commands.c  avdl_dynamic_array.c  avdl_editor.c  avdl_file_op.c  avdl_json.c  avdl_lexer.c  avdl_log.c  avdl_main.c  avdl_parser_cglut.c  avdl_pkg.c  avdl_platform.c  avdl_semantic_analyser.c  avdl_settings.c  avdl_std.c  avdl_string.c  avdl_struct_table.c  avdl_symtable.c  avdl_time.c  avdl_time2.c  avdl_variable_type.c  dd_commands.c  dd_dynamic_array.c  dd_variable_type.c  file_op.c  lex.l  lexer.c  main.c  parser.c  parser_cglut.c  semantic_analyser.c  struct_table.c  symtable.c  whereami.c  yacc.y
templates/: CMakeLists.txt  makefile
templates/sample_project/: .gitignore  app.avdl
templates/sample_project/.github/workflows/: .build.yml
templates/sample_project/include/: world.ddh
templates/sample_project/src/: main.dd  world.dd
tests/: avdl_arguments.test.c  avdl_ast_node.test.c  avdl_dynamic_array.test.c  avdl_file_op.test.c  avdl_lexer.test.c  avdl_lexer_input.dd  avdl_pkg.test.c  avdl_settings.test.c  avdl_string.test.c  errorapp.avdl
tests/avdl_dynamic_array/: avdl_dynamic_array.test.c  dependencies
vim/ftdetect/: avdl.vim  ddlang.vim
vim/syntax/: avdl.vim
